[package]
name = "computus"
version = "1.0.0"
authors = ["David Hewson <dev@daveid.co.uk>"]

description = "Computus Easter calculation in Rust"
homepage = "https://github.com/dten/computus"
repository = "https://github.com/dten/computus"
keywords = ["easter", "date", "calendar", "gregorian", "julian"]
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]
chrono = { version = ">=0.2.0", optional = true }

[dev-dependencies]
rstest = { version = "0.17.0", defaut-features = false }
rstest_reuse = { version = "0.5.0", defaut-features = false }