[package]
name = "computus"
version = "2.0.0"
authors = ["David Hewson <dten@hewson.dev>"]

description = "Computus Easter calculation in Rust"
homepage = "https://github.com/dten/computus"
repository = "https://github.com/dten/computus"
keywords = ["easter", "date", "calendar", "gregorian", "julian"]
readme = "README.md"
license = "MIT"
edition = "2021"
rust-version = "1.81"

[dependencies]
chrono = { version = ">=0.2.0", optional = true }
jiff = { version = ">=0.1", optional = true }

[dev-dependencies]
rstest = { version = "0.26.1", default-features = false }
rstest_reuse = { version = "0.7.0", default-features = false }
